[package]
name = "define"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "def"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.4"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
rodio = { version = "0.22.2", features = ["playback", "mp3", "wav"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
